# PythonODFTemplator

./: LICENSE  ODFTemplator.py  README  README.md  odftemplator.py  setup.cfg
