[metadata]
name = PythonSQLMapper
version = 1.0
url = https://github.com/marvelph/PythonODFTemplator
author = Kenji Nishishiro
author_email = marvel@programmershigh.org
classifiers = 
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
license = MIT
license_file = LICENSE
description = ODF templating library for python.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
python_requires = >= 3.5
py_modules = odftemplator
